# nexus-ai

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  data.py  health.py  kb.py  qa.py  router.py  ws.py
backend/app/core/: config.py
backend/app/core/langgraph/: enhanced_nodes.py  graph.py  nodes.py  state.py
backend/app/core/prompts/: analysis.md  chart.md  intent.md
backend/app/middleware/: __init__.py  audit.py  circuit_breaker.py  error_handler.py  logging_config.py  rate_limiter.py  rbac.py  retry.py  trace.py
backend/app/models/: __init__.py  base.py  conversation.py  feedback.py  knowledge_base.py  user.py
backend/app/schemas/: auth.py  qa.py
backend/app/services/: auth.py  cache.py  chart_service.py  conversation.py  data_service.py  database.py  doc_parser.py  embedding.py  kb_service.py  llm.py  rag.py  report_service.py
backend/app/services/bot/: alert_service.py  brain.py  ws_manager.py
backend/app/utils/: __init__.py  calculator.py  date_utils.py  financial_fmt.py  time_series.py
backend/scripts/: seed.py  test_qa.py
backend/tests/: conftest.py
backend/tests/unit/: test_api_routes.py  test_auth.py  test_bot.py  test_calculator.py  test_conversation.py  test_financial_fmt.py  test_langgraph.py  test_time_series.py
demo/: e-1-no-bot.html  e-1-with-bot.html  e-2-no-bot.html  e-2-with-bot.html  g-2-no-bot.html  g-2-with-bot.html  index.html  indexv2.html
docs/: AI-Bot-可行性分析.md  AI-Bot-架构设计方案.md  V3-架构设计方案.md
frontend-app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
monitoring/: prometheus.yml
scripts/: deploy.py
(+35 files in other folders)
